--- a/soa/BamExporterApp/BAMExporter/pom.xml
+++ b/soa/BamExporterApp/BAMExporter/pom.xml
@@ -85,6 +85,25 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <compilerId>groovy-eclipse-compiler</compilerId>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-eclipse-compiler</artifactId>
+            <version>2.9.2-01</version>
+          </dependency>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-eclipse-batch</artifactId>
+            <version>2.4.3-01</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
   <description>Sample Composite process</description>
@@ -131,6 +150,12 @@
       <artifactId>BC4J-Service-Runtime</artifactId>
       <version>12.2.1-2-0</version>
       <type>pom</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.3</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
