--- a/soa/BamExporterApp/BAMExporter/pom.xml
+++ b/soa/BamExporterApp/BAMExporter/pom.xml
@@ -130,7 +130,7 @@
             <configuration>
               <outputDirectory>${soaLibDirectory}</outputDirectory>
               <excludeTypes>pom</excludeTypes>
-              <excludeScope>provided</excludeScope>
+              <includeScope>runtime</includeScope>
               <overWriteReleases>false</overWriteReleases>
               <overWriteSnapshots>false</overWriteSnapshots>
               <overWriteIfNewer>true</overWriteIfNewer>
@@ -214,6 +214,18 @@
       <artifactId>xmlparserv2</artifactId>
       <version>12.2.1-2-0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
