--- a/soa/BamExporterApp/BAMExporter/pom.xml
+++ b/soa/BamExporterApp/BAMExporter/pom.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <!--
-           This POM was automatically generated during SOA project creation.           
-           This POM relates to this SOA Composite, i.e. the one in this same directory.
-           There is another POM in the SOA Application directory which handles
-           the whole SOA Application, which may contain additional projects. 
-        -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.avioconsulting.bamexporter</groupId>
   <artifactId>BAMExporter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>sar</packaging>
   <parent>
       <groupId>com.avioconsulting.oracle.soa</groupId>
